@@ -15,6 +15,7 @@ Cacti CHANGELOG
 -issue#1507: When saving graph settings from the graph page, the graph template id should not be included
 -issue#1510: New Graphs Undefined Variable $graph_template_name
 -issue#1515: Special characters not rendered properly in settings
+-issue#1530: Inconsistent behaviour handling blank Field Name/Value when editing data query suggested values
 -issue: Move Graph removal function to Graph API
 -issue: Fix issue with display_custom_error_message() causing problem with system error message handling
 -issue: Graph List View was not fully responsive
